Fix score popup styling;
* The content overflowed because of the max-height
* The margin was applied also on smaller screens causing the positioning
  to be incorrect

--- a/packages/front/src/Popup.css
+++ b/packages/front/src/Popup.css
@@ -61,7 +61,8 @@
   .popup_content {
     transform: translateX(-50%);
     left: 50%;
-    max-height: calc(100vh * 0.5);
+    max-height: calc(100vh * 0.6);
+    overflow-y: auto;
   }
 
   .popup_container-center .popup_content {
